<?xml version="1.0"?>
<package format="2">
  <name>fzi_sensor_msgs</name>
  <version>0.1.0</version>
  <description>This package provides messages related to sensor data
  </description>

  <maintainer email="kuhnt@fzi.de">Florian Kuhnt</maintainer>

  <license>CDDL</license>


  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib</build_depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>fzi_geometry_msgs</depend>
  <depend>sensor_msgs</depend>


  <export>
      <!-- Other tools can request additional information be placed here -->
  </export>
</package>
